Thu Feb  8 22:02:14 2007  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/marshaltestlib.rb: eval(sym) -> eval(sym.to_s)

Thu Feb  8 21:35:16 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* test/win32ole/test_propertyputref.rb (setup): fix typo.

	* test/win32ole/test_win32ole_event.rb: should not use
	  InternetExplorer.gohome to test.

Thu Feb  8 21:02:07 2007  Koichi Sasada  <ko1@atdot.net>

	* thread.c (GVL_UNLOCK_RANGE): rename to BLOCKING_REGION().

	* thread.c (rb_thread_run_parallel): rename to
	  rb_thread_blocking_region().

Thu Feb  8 15:48:44 2007  Koichi Sasada  <ko1@atdot.net>

	* yarvcore.h, thread.c: fix to use pthread on cygwin.

	* yarvcore.h, thread.c: move GVL_UNLOCK_BEGIN() and GVL_UNLOCK_END()
	  from yarvcore.h to thread.c.

	* thread.c: change GVL_UNLOCK_RANGE() arguments
	  (adding ubf as 2nd argument).

	* thread.c: fix to use polling in select on cygwin and mswin32.

	* thread.c, thread_pthread.ci, thread_win32.ci, yarvcore.h: 
	  rename:
	  * rb_thread_t#interrupt_function -> unblock_function
	  * rb_interrupt_function_t -> rb_unblock_function
	  * some interrupt function name -> ubf_*
	  * yarv_* -> *

Thu Feb  8 16:08:02 2007  Koichi Sasada  <ko1@atdot.net>

	* common.mk: fix to use RUNRUBY instead of BASERUBY if possible.

	* common.mk ($(INSNS) rule): remove $(PROGRAM) first.

Thu Feb  8 15:43:05 2007  Koichi Sasada  <ko1@atdot.net>

	* process.c: fix to use rb_status_line_set/get/clear().

	* eval_intern.h: fix line break.

Thu Feb  8 15:00:14 2007  Koichi Sasada  <ko1@atdot.net>

	* blockinlining.c, error.c, eval.c, eval_error.h, eval_intern.h,
	  eval_jump.h, eval_load.c, eval_safe.h, gc.c, proc.c, signal.c,
	  thread.c, thread_pthread.ci, thread_win32.ci, vm.c, vm.h,
	  vm_dump.c, vm_evalbody.ci, yarvcore.c, yarvcore.h:
	  fix typo (rb_thead_t -> rb_thread_t).

	* eval_intern.h: remove unused definitions.

	* common.mk: fix around vm_opts.h path
	  and remove harmful argument passed to insns2vm.rb.
